# audio-video-chat

./: README.md  pyproject.toml
app/: audio_video_chat.py
app/handlers/: gemini_handler.py
app/statics/css/: style.css
app/statics/js/: share_screen.js
app/utils/: medias.py
