[project]
name = "aivoiceagent"
version = "0.1.0"
description = ""
authors = [
    {name = "Charles DZADU",email = "dzaducharles@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastrtc[stt,tts,vad] (>=0.0.23,<0.0.24)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "google-genai (>=1.14.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
